<resources>
    <string name="app_name">AndroidUomProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="touch_the_plane_to_learn_your_lucky_trip">Tap the plane to learn your lucky trip</string>
    <string name="title_suggestions_fragment">Top destinations for you</string>
    <string name="logo">logo</string>
    <string name="dots">dots</string>
    <string name="location_input_message">Please type your primary airport\'s city name.</string>


    <!-- Search form -->
    <string name="from">From:</string>
    <string name="from_hint">City Name</string>
    <string name="to">To:</string>
    <string name="to_hint">City Name</string>
    <string name="leaving_day_title">Leaves at:</string>
    <string name="return_day_title">Returns at:</string>
    <string name="buy_flight">Proceed</string>


    <!-- Settings -->
    <string name="pref_cur_label">Currency</string>
    <string name="pref_cur_key" translatable="false">cur</string>
    <string name="pref_cur_eur" translatable="false">EUR</string>
    <string name="pref_cur_usd" translatable="false">USD</string>
    <string name="loading">loading</string>
    <string name="pref_location_label">City</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default">none</string>
    <string name="pref_location_code_key" translatable="false">location_code</string>
    <string name="pref_location_code_default">none</string>
    <string name="one_way">One way</string>
    <string name="direct">Direct</string>

    <string-array name="pref_cur_entries">
        <item>Euro</item>
        <item>US dollar</item>
    </string-array>

    <string-array name="pref_cur_entryValues">
        <item>EUR</item>
        <item>USD</item>
    </string-array>
</resources>
