<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical" android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/small_views_paddings"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



                <TextView
                    android:padding="@dimen/activity_vertical_margin"

                    android:text="@string/from"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:background="@android:color/transparent"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:id="@+id/from"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/from_hint"/>


        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_views_paddings"
            android:background="@drawable/rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



                <TextView
                    android:padding="@dimen/activity_vertical_margin"

                    android:text="@string/to"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:background="@android:color/transparent"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:id="@+id/to"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:hint="@string/to_hint"/>



        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_views_paddings"
            android:background="@drawable/rounded_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@drawable/rounded_border"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">


                <TextView
                    android:text="@string/leaving_day_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:background="@android:color/transparent"
                        android:id="@+id/previous_leaving_month"
                        android:layout_width="@dimen/loading_dim"
                        android:layout_height="wrap_content"
                        android:text="&lt;"
                        android:textSize="25sp"/>

                    <TextView
                        android:background="@android:color/transparent"
                        android:text=""
                        android:id="@+id/leaving_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                    <Button
                        android:background="@android:color/transparent"
                        android:id="@+id/next_leaving_month"
                        android:layout_width="@dimen/loading_dim"
                        android:layout_height="wrap_content"
                        android:text="&gt;"
                        android:textSize="25sp"/>
                </LinearLayout>
                <Spinner
                    android:id="@+id/leaving_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>


            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/rounded_border"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/return_day_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:background="@android:color/transparent"
                        android:id="@+id/previous_return_month"
                        android:layout_width="@dimen/loading_dim"
                        android:layout_height="wrap_content"
                        android:text="&lt;"
                        android:textSize="25sp"/>

                    <TextView
                        android:text=""
                        android:id="@+id/return_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>

                    <Button
                        android:background="@android:color/transparent"
                        android:id="@+id/next_return_month"
                        android:layout_width="@dimen/loading_dim"
                        android:layout_height="wrap_content"
                        android:text="&gt;"
                        android:textSize="25sp"/>
                </LinearLayout>
                <Spinner
                    android:id="@+id/return_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/small_views_paddings"
            android:orientation="horizontal"
            android:background="@drawable/rounded_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:layout_margin="@dimen/small_views_paddings"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/one_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_margin="@dimen/small_views_paddings"
                    android:text="@string/one_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />



            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_margin="@dimen/small_views_paddings"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/direct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:text="@string/direct"
                    android:layout_margin="@dimen/small_views_paddings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />



            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/search"
            android:layout_marginTop="@dimen/small_views_paddings"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/rounded_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SEARCH"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"/>

        <TextView
            android:textSize="18sp"
            android:layout_margin="@dimen/small_views_paddings"
            android:id="@+id/trip_text"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/search_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>